--- a/Supermercado.Core/Supermercado.Core.csproj
+++ b/Supermercado.Core/Supermercado.Core.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="automapper" Version="10.0.0" />
+  </ItemGroup>
+
 </Project>
